[package]
name = "bindmount"
version = "0.0.1"
authors = ["Andrei Gherzan <andrei@balena.io>"]
description = "This tools bind mounts a path to another path keeping the same filesystem structure of the TARGET in the SOURCE. As well it takes of care creating the SOURCE for the case where TARGET is a file or a directory"
repository = "https://github.com/balena-os/bindmount.git"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2"
env_logger = "0.6"
errno = "0.2"
libc = "0.2.31"
log = "0.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

